# MySha

./: README.md
MySha/: Cargo.toml
MySha/src/: lib.rs  main.rs
MySha/src/ecc/: ecc_math.rs  mod.rs
MySha/src/ecc_cli/: mod.rs  output.rs
MySha/src/sha256/: helper_functions.rs  mod.rs
MySha/src/sha256_cli/: animation.rs  helper_functions.rs  mod.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/mysha/: all.html  enum.MyshaError.html  index.html  sidebar-items.js
doc/mysha/ecc/: enum.EccError.html  enum.Point.html  index.html  sidebar-items.js  struct.Curve.html  struct.KeyPair.html  struct.PrivKey.html  struct.PubKey.html  struct.Signature.html
doc/mysha/ecc/ecc_math/: enum.EccError.html  enum.Point.html  struct.Curve.html
doc/mysha/sha256/: enum.HashError.html  enum.InputType.html  fn.sha256.html  index.html  sidebar-items.js  struct.Hash256.html
doc/src/mysha/: lib.rs.html
doc/src/mysha/ecc/: ecc_math.rs.html  mod.rs.html
doc/src/mysha/sha256/: helper_functions.rs.html  mod.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.PartialEq.js
doc/trait.impl/core/convert/: trait.From.js
doc/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
python-implementation/: README.md  ecc.py  main.py  sha256.py
rust-implementation/: Cargo.toml
rust-implementation/src/: animation.rs  helper_functions.rs  main.rs
(+2 files in other folders)
